[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[project]
name = "jaraco.financial"
authors = [
	{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" },
]
description = "Tools and routines for managing personal finances by jaraco"
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dependencies = [
	"keyring",
	"path >= 16.10",
	"ofxparse",
	"requests",
	"jaraco.itertools",
	"jaraco.logging",
	"jaraco.ui",
	"jaraco.collections",
	"python-dateutil>=2.0",
	"jaraco.functools",
	"autocommand",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jaraco/jaraco.financial"

[project.optional-dependencies]
testing = [
	# upstream
	"pytest >= 6, != 8.1.*",
	"pytest-checkdocs >= 2.4",
	"pytest-cov",
	"pytest-mypy",
	"pytest-enabler >= 2.2",
	"pytest-ruff >= 0.2.1",

	# local
	"splinter",
	"types-python-dateutil",
	"types-requests",
	"types-PyYAML",
	"types-six",
]
docs = [
	# upstream
	"sphinx >= 3.5",
	"jaraco.packaging >= 9.3",
	"rst.linker >= 1.9",
	"furo",
	"sphinx-lint",

	# local
]

[project.scripts]
fix-qif-date-format = "jaraco.financial.qif:fix_dates_cmd"
launch-in-money = "jaraco.financial.msmoney:launch_cmd"
ofx = "jaraco.financial.ofx:handle_command_line"
clean-msmoney-temp = "jaraco.financial.msmoney:clean_temp"
record-document-hashes = "jaraco.financial.records:send_hashes"

[tool.setuptools_scm]
