[metadata]
name = jaraco.financial
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Tools and routines for managing personal finances by jaraco
long_description = file:README.rst
url = https://github.com/jaraco/jaraco.financial
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.8
install_requires =
	keyring
	path.py
	ofxparse
	requests
	jaraco.itertools
	jaraco.logging
	jaraco.ui
	jaraco.collections
	python-dateutil>=2.0
	jaraco.functools
	autocommand

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-cov
	pytest-mypy; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 2.2
	pytest-ruff >= 0.2.1

	# local
	splinter
	types-python-dateutil
	types-requests
	types-PyYAML
	types-six

docs =
	# upstream
	sphinx >= 3.5
	# workaround for sphinx/sphinx-doc#11662
	sphinx < 7.2.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# local

[options.entry_points]
console_scripts =
	fix-qif-date-format = jaraco.financial.qif:fix_dates_cmd
	launch-in-money = jaraco.financial.msmoney:launch_cmd
	ofx = jaraco.financial.ofx:handle_command_line
	clean-msmoney-temp = jaraco.financial.msmoney:clean_temp
	record-document-hashes = jaraco.financial.records:send_hashes
